--- a/home.html
+++ b/home.html
@@ -129,7 +129,7 @@
       <section class="container mx-auto srr">
         <div class="pro-title flex items-center">
           <h1 class="pras-mtext">Projects</h1>
-          <a href="#">
+          <a href="/src/pages/underconstruction.html">
             <h2 class="pras-allpro-border pras-subtext">View all Projects</h2>
           </a>
         </div>
@@ -284,7 +284,7 @@
             </div>
             <div class="mt-20 mx-auto">
               <a
-                href="#"
+                href="/src/pages/underconstruction.html"
                 class="pras-blog-button uppercase px-8 py-3 rounded-lg blog-btn"
                 ><button>View all blogs</button></a
               >
