--- a/src/pages/underconstruction.html
+++ b/src/pages/underconstruction.html
@@ -267,7 +267,7 @@
           <i id="switchIcon" class="fa-solid fa-moon fa-2x"></i>
         </button>
         <ul>
-          <a href="/src/pages/home.html">
+          <a href="/home.html">
             <li>Home</li>
           </a>
           <a target="_blank" href="https://github.com/PRASSamin">
@@ -284,7 +284,7 @@
             Webpage Is Under
           </h2>
           <h1 class="uppercase">Construction</h1>
-          <a href="/src/pages/home.html"
+          <a href="/home.html"
           ><button
           class="bg-black text-white py-3 px-16 rounded-xl text-lg font-bold mt-10 pras-d-button"
           >
