--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
       rel="stylesheet"
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="shortcut icon" href="/images/favicon.svg" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.svg" type="image/x-icon" />
     <title>Portfolio</title>
   </head>
   <body class="pras-bg">
@@ -28,23 +28,23 @@
 
     <section class="nav_area">
       <div class="top-nav container pt-5 mx-auto pras-black">
-        <a href="/index.html">
+        <a href="index.html">
           <img class="pras-logo" src="images/logo-b.svg" alt="" srcset="" />
         </a>
         <ul class="menu-items pras-mtext">
-          <a href="/index.html">
+          <a href="index.html">
             <li class="active">Home</li>
           </a>
-          <a href="/pages/underconstruction.html">
+          <a href="pages/underconstruction.html">
             <li>Projects</li>
           </a>
           <a target="_blank" href="https://github.com/PRASSamin">
             <li>Github</li>
           </a>
-          <a href="/pages/underconstruction.html">
+          <a href="pages/underconstruction.html">
             <li>Blogs</li>
           </a>
-          <a href="/pages/underconstruction.html">
+          <a href="pages/underconstruction.html">
             <li>about</li>
           </a>
         </ul>
@@ -118,7 +118,7 @@
           <div class="flutter pras-s-border">
             <img
               class="pras-logo"
-              src="/images/flutter.svg"
+              src="images/flutter.svg"
               alt="Flutter"
               srcset=""
             />
@@ -136,7 +136,7 @@
       <section class="container mx-auto srr">
         <div class="pro-title flex items-center">
           <h1 class="pras-mtext">Projects</h1>
-          <a href="/pages/underconstruction.html">
+          <a href="pages/underconstruction.html">
             <h2 class="pras-allpro-border pras-subtext">View all Projects</h2>
           </a>
         </div>
@@ -147,7 +147,7 @@
             class="w-1/4 p-3 proj"
           >
             <div>
-              <img src="/images/recipe-realm.jpg" alt="" srcset="" />
+              <img src="images/recipe-realm.jpg" alt="" srcset="" />
               <div class="dark-mask"></div>
             </div>
             <div class="proj-text">
@@ -161,7 +161,7 @@
             class="w-1/4 p-3 proj"
           >
             <div>
-              <img src="/images/pras-weather.jpg" alt="" srcset="" />
+              <img src="images/pras-weather.jpg" alt="" srcset="" />
             </div>
             <div class="proj-text">
               <h2 class="pras-subtext">flutter app</h2>
@@ -174,7 +174,7 @@
             class="w-1/4 p-3 proj"
           >
             <div>
-              <img src="/images/spectrum-theme.png" alt="" srcset="" />
+              <img src="images/spectrum-theme.png" alt="" srcset="" />
             </div>
             <div class="proj-text">
               <h2 class="pras-subtext">vscode extension</h2>
@@ -187,7 +187,7 @@
             class="w-1/4 p-3 proj"
           >
             <div>
-              <img src="/images/PRAS-Downloader.jpg" alt="" srcset="" />
+              <img src="images/PRAS-Downloader.jpg" alt="" srcset="" />
             </div>
             <div class="proj-text">
               <h2 class="pras-subtext">website</h2>
@@ -315,7 +315,7 @@
             </div>
             <div class="mt-20 mx-auto">
               <a
-                href="/pages/underconstruction.html"
+                href="pages/underconstruction.html"
                 class="pras-blog-button uppercase px-8 py-3 rounded-lg blog-btn"
                 ><button>View all blogs</button></a
               >
@@ -329,10 +329,10 @@
       <section class="bnav-top pras-nav-b">
         <div class="pt-24 pb-16 container flex mx-auto gap-28">
           <div class="c-1 w-1/3 flex flex-col justify-start items-start">
-            <a href="/index.html">
+            <a href="index.html">
               <img
                 class="w-40 object-cover mb-8 pras-logo"
-                src="/images/logo-b.svg"
+                src="images/logo-b.svg"
                 alt="PRAS LOGO"
               />
             </a>
@@ -347,16 +347,16 @@
               class="pras-mtext uppercase leading-9 text-lg font-medium flex flex-col pras-gray"
             >
               <li>
-                <a href="/index.html" class="active">Home</a>
+                <a href="index.html" class="active">Home</a>
               </li>
               <li>
-                <a href="/pages/underconstruction.html">Projects</a>
+                <a href="pages/underconstruction.html">Projects</a>
               </li>
               <li>
-                <a href="/pages/underconstruction.html">Blogs</a>
+                <a href="pages/underconstruction.html">Blogs</a>
               </li>
               <li>
-                <a href="/pages/underconstruction.html">About</a>
+                <a href="pages/underconstruction.html">About</a>
               </li>
               <li>
                 <a
@@ -426,16 +426,16 @@
               </a>
             </div>
             <h1 class="copyrighttxt pras-subtext">
-              ©2024 <a href="/index.html">PRAS.</a> All rights reserved.
+              ©2024 <a href="index.html">PRAS.</a> All rights reserved.
             </h1>
           </div>
         </div>
       </section>
     </nav>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="/js/theme.js"></script>
+    <script src="js/theme.js"></script>
 
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/js/all.min.js"
