--- a/pages/underconstruction.html
+++ b/pages/underconstruction.html
@@ -8,7 +8,7 @@
     href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"
     rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -16,7 +16,7 @@
     crossorigin="anonymous"
     referrerpolicy="no-referrer"
     />
-    <link rel="shortcut icon" href="images/error.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/images/error.png" type="image/x-icon">
   </head>
   
   <style>
@@ -261,7 +261,7 @@
     <div class="mContainer pras-mtext">
       <div class="container mx-auto pt-5 flex justify-between">
         <a href="">
-          <img class="pras-logo" src="images/logo-b.svg" alt="" srcset="" />
+          <img class="pras-logo" src="/images/logo-b.svg" alt="" srcset="" />
         </a>
         <button id="switchDark">
           <i id="switchIcon" class="fa-solid fa-moon fa-2x"></i>
@@ -293,13 +293,13 @@
         >
       </div>
       <div class="srRight w-1/2 flex my-self flex-col items-end">
-        <img src="images/webdevelopment.png" alt="" />
+        <img src="/images/webdevelopment.png" alt="" />
       </div>
     </div>
   </div>
 </div>
 
-<script src="js/theme.js"></script>
+<script src="/js/theme.js"></script>
 <script src="https://unpkg.com/scrollreveal"></script>
 
 <script>
