--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
           <a href="index.html">
             <li class="active">Home</li>
           </a>
-          <a href="pages/underconstruction.html">
+          <a href="underconstruction.html">
             <li>Projects</li>
           </a>
           <a target="_blank" href="https://github.com/PRASSamin">
             <li>Github</li>
           </a>
-          <a href="pages/underconstruction.html">
+          <a href="underconstruction.html">
             <li>Blogs</li>
           </a>
-          <a href="pages/underconstruction.html">
+          <a href="underconstruction.html">
             <li>about</li>
           </a>
         </ul>
@@ -315,7 +315,7 @@
             </div>
             <div class="mt-20 mx-auto">
               <a
-                href="pages/underconstruction.html"
+                href="underconstruction.html"
                 class="pras-blog-button uppercase px-8 py-3 rounded-lg blog-btn"
                 ><button>View all blogs</button></a
               >
@@ -350,13 +350,13 @@
                 <a href="index.html" class="active">Home</a>
               </li>
               <li>
-                <a href="pages/underconstruction.html">Projects</a>
+                <a href="underconstruction.html">Projects</a>
               </li>
               <li>
-                <a href="pages/underconstruction.html">Blogs</a>
+                <a href="underconstruction.html">Blogs</a>
               </li>
               <li>
-                <a href="pages/underconstruction.html">About</a>
+                <a href="underconstruction.html">About</a>
               </li>
               <li>
                 <a
