--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
       <section class="container mx-auto srr">
         <div class="pro-title flex items-center">
           <h1 class="pras-mtext">Projects</h1>
-          <a href="pages/underconstruction.html">
+          <a href="underconstruction.html">
             <h2 class="pras-allpro-border pras-subtext">View all Projects</h2>
           </a>
         </div>
