--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
           </div>
           <div class="c-2 w-1/3 flex flex-col justify-center items-center">
             <ul
-              class="pras-mtext uppercase leading-9 text-lg font-medium flex flex-col pras-gray"
+              class="pras-mtext uppercase leading-9 text-lg font-normal flex flex-col pras-gray"
             >
               <li>
                 <a href="index.html" class="active">Home</a>
