--- a/underconstruction.html
+++ b/underconstruction.html
@@ -270,7 +270,7 @@
   <body>
     <div class="mContainer pras-mtext">
       <div class="container mx-auto pt-5 flex justify-between">
-        <a href="">
+        <a href="underconstruction.html">
           <img class="pras-logo" src="images/logo-b.svg" alt="" srcset="" />
         </a>
         <button id="switchDark">
