--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
           <a href="index.html">
             <li class="active">Home</li>
           </a>
-          <a href="underconstruction.html">
+          <a href="projects.html">
             <li>Projects</li>
           </a>
           <a target="_blank" href="https://github.com/PRASSamin">
             <li>Github</li>
           </a>
-          <a href="underconstruction.html">
+          <a href="blogs.html">
             <li>Blogs</li>
           </a>
-          <a href="underconstruction.html">
+          <a href="about.html">
             <li>about</li>
           </a>
         </ul>
       </div> 
 
-      <div class="container mx-auto nav-content flex">
+      <div class="container w-full h-full  mx-auto nav-content flex">
         <div class="flex my-self srLeft">
           <h1 class="pras-mtext">PRAS Samin</h1>
           <h2 class="pras-mtext">Developer</h2>
@@ -137,7 +137,7 @@
       <section class="container mx-auto srr">
         <div class="pro-title flex items-center">
           <h1 class="pras-mtext">Projects</h1>
-          <a href="underconstruction.html">
+          <a href="projects.html">
             <h2 class="pras-allpro-border pras-subtext">View all Projects</h2>
           </a>
         </div>
@@ -316,7 +316,7 @@
             </div>
             <div class="mt-20 mx-auto">
               <a
-                href="underconstruction.html"
+                href="blogs.html"
                 class="pras-blog-button uppercase px-8 py-3 rounded-lg blog-btn"
                 ><button>View all blogs</button></a
               >
@@ -351,13 +351,13 @@
                 <a href="index.html" class="active">Home</a>
               </li>
               <li>
-                <a href="underconstruction.html">Projects</a>
+                <a href="projects.html">Projects</a>
               </li>
               <li>
-                <a href="underconstruction.html">Blogs</a>
+                <a href="blogs.html">Blogs</a>
               </li>
               <li>
-                <a href="underconstruction.html">About</a>
+                <a href="about.html">About</a>
               </li>
               <li>
                 <a
